welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:5: error: '(' expected but identifier found.
    if estFaceMur==true{
       ^DwarfCode:8: error: illegal start of simple expression
  }
  ^